# clAmpcor

./: .gitignore  CMakeLists.txt  LICENSE  README.md
android/: CMakeLists.txt  adreno.md
examples/: ampcor.json  benchmark.md
include/CL/: cl.h  cl_ext.h  cl_ext_qcom.h
src/: clAmpcor.cc  clAmpcor.h  clCorrelator.cc  clCorrelator.h  clFFT2d.cc  clFFT2d.h  clHelper.cc  clHelper.h  clKernels.cc  clOversampler.cc  clOversampler.h  clProgram.cc  clProgram.h  main.cc  unitTests.cc
src/kernels/: Common.cc  Complex.cc  FFT2d.cc  FFT2d_simple.cc  Matrix.cc  ReduceCL2.cc
